--- a/OneIoT.Framework.Test/OneIoT.Framework.Test.csproj
+++ b/OneIoT.Framework.Test/OneIoT.Framework.Test.csproj
@@ -14,6 +14,7 @@
         <PackageReference Include="NUnit" Version="4.2.2"/>
         <PackageReference Include="NUnit.Analyzers" Version="4.3.0"/>
         <PackageReference Include="NUnit3TestAdapter" Version="4.6.0"/>
+        <PackageReference Include="SharpDX" Version="4.2.0" />
     </ItemGroup>
 
     <ItemGroup>
