--- a/OneIoT.Framework/OneIoT.Framework.csproj
+++ b/OneIoT.Framework/OneIoT.Framework.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
       <PackageReference Include="OpenTK" Version="4.8.2" />
+      <PackageReference Include="SharpDX" Version="4.2.0" />
     </ItemGroup>
 
 </Project>
