--- a/OneIoT.Framework.Test/OneIoT.Framework.Test.csproj
+++ b/OneIoT.Framework.Test/OneIoT.Framework.Test.csproj
@@ -15,6 +15,7 @@
         <PackageReference Include="NUnit.Analyzers" Version="4.3.0"/>
         <PackageReference Include="NUnit3TestAdapter" Version="4.6.0"/>
         <PackageReference Include="SharpDX" Version="4.2.0" />
+        <PackageReference Include="StbImageSharp" Version="2.30.15" />
     </ItemGroup>
 
     <ItemGroup>
