--- a/OneIoT.Framework/OneIoT.Framework.csproj
+++ b/OneIoT.Framework/OneIoT.Framework.csproj
@@ -10,6 +10,7 @@
     <ItemGroup>
       <PackageReference Include="OpenTK" Version="4.8.2" />
       <PackageReference Include="SharpDX" Version="4.2.0" />
+      <PackageReference Include="StbImageSharp" Version="2.30.15" />
     </ItemGroup>
 
 </Project>
